# rjkshelltools

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.adverbio  README.inplace  README.md  accept-socket.1  accept-socket.c  acinclude.m4  adverbio.1  adverbio.c  alarm.1  alarm.c  anagrams.1  anagrams.c  bind-socket.1  bind-socket.c  check-tested-everything  cloexec.c  close.c  configure.ac  connect-socket.1  connect-socket.c  daemon.1  daemon.c  debug.c  dirname.c  dup.c  dup2.c  error.c  fatal.c  fcntl.c  fdmap.c  fork.c  getline.c  getopt.c  (+61 more)
debian/: changelog  control  copyright
